Wed Feb 13 02:10:27 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/bestfcom.c: Patch from Chris Adams to accept output from older
   Ferrups models.

Tue Feb 12 04:43:11 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/libmge-xml.c: Remove MSG_NOSIGNAL, as it is non-standard, and
   apparently not necessary in this case.

Sun Feb 10 16:06:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - (clients|drivers|server)/Makefile.am: only add target specific
   LDFLAGS if the target is enabled (in case something is really broken
   and the linker chokes on it)

Sun Feb 10 15:32:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - configure.in,(clients|drivers|server)/Makefile.am: only add target
   specific CFLAGS if the target is enabled [Alioth Bug #310582]

Sat Feb  9 19:44:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/serial.[ch]: pass the buffer argument as (void *) pointer,
   rather than as a (char *) or (unsigned char *) where possible, to
   shut up compiler warnings about mismatches in signedness and to
   allow passing other variable types too without typecasting
 - drivers/megatec_usb.c: adapt the ser_get_line() function to the
   above

Sat Feb  9 11:40:50 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - no comment (it has to do with the HAL support once more)
   [Alioth Bug #304156]

Sat Feb  9 10:50:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - fix HAL support installation yet once again [Alioth Bug #304156]

Sat Feb  9 00:21:49 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - packaging/debian/rules: updated for HAL path changes

Fri Feb  8 23:59:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: enable code to set Unit ID.

Fri Feb  8 19:53:01 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: flush buffers before ser_send_*/ser_get_* to avoid a
   possible loss of synchronization if the buffer happens to have garbage.
